crates/dat0-ui/tests/snapshots/visual_snapshot__shell__populated.snap
---
source: crates/dat0-ui/tests/visual_snapshot.rs
expression: "rendered[0].1"
---
<div class="d0-scene" data-scene="shell/populated" style="width: 1440px; height: 900px; overflow: hidden">
<div data-a11y-id="window" tabindex="0" class="d0-window">
<div class="d0-titlebar" data-a11y-id="titlebar" role="banner">
<div class="d0-traffic-spacer">
</div>
<div class="d0-wordmark no-drag">dat<span class="d0-logomark">
</span>
</div>
<span class="d0-mono" style="color: var(--d0-chrome-muted)">q3-review</span>
<div style="margin-left: auto">
</div>
<div class="d0-pill no-drag" data-a11y-id="source-pill">
<span class="d0-dot">
</span>
<span class="d0-label" style="color: var(--d0-warn-text)">local</span>
</div>
</div>
<div class="d0-tabstrip" data-a11y-id="tabstrip" role="tablist">
<div class="d0-search-slot" data-a11y-id="command-slot">
<button class="d0-search-gutter" data-a11y-id="command-launcher" role="button" aria-label="Open the command palette" tabindex="0">
<span>search tables, queries…</span>
<span class="d0-key" data-chord="palette">CHORD</span>
</button>
</div>
<div class="d0-tab is-active">
<button class="d0-tab-label" data-a11y-id="tab-0" role="tab" aria-selected="true" tabindex="-1">
<span class="d0-swatch sw-csv">
</span>sales.csv</button>
<button class="d0-tab-close" data-a11y-id="tab-close-0" role="button" aria-label="Close sales.csv" tabindex="-1">✕</button>
</div>
<div class="d0-tab">
<button class="d0-tab-label" data-a11y-id="tab-1" role="tab" aria-selected="false" tabindex="-1">
<span class="d0-swatch sw-parquet">
</span>trips.parquet</button>
<button class="d0-tab-close" data-a11y-id="tab-close-1" role="button" aria-label="Close trips.parquet" tabindex="-1">✕</button>
</div>
<div class="d0-tab">
<button class="d0-tab-label" data-a11y-id="tab-2" role="tab" aria-selected="false" tabindex="-1">revenue_by_region</button>
<button class="d0-tab-close" data-a11y-id="tab-close-2" role="button" aria-label="Close revenue_by_region" tabindex="-1">✕</button>
</div>
<div class="d0-tab-filler">
</div>
</div>
<div class="d0-shell" style="grid-template-columns: 238px 0px minmax(0, 1fr)">
<div class="d0-sidebar" data-a11y-id="sidebar" role="navigation" aria-label="Catalog">
<div class="d0-sidebar-head">
<span class="d0-label">catalog</span>
<span class="d0-mono is-local">local</span>
</div>
<div class="d0-sidebar-body" data-a11y-id="catalog-tree" role="tree" tabindex="0">
<div data-a11y-id="section-files" role="group" aria-label="FILES">
<button class="d0-section-label d0-label" data-a11y-id="section-toggle-files" aria-expanded="true">
<span class="d0-chevron">▾</span>FILES</button>
<button class="d0-row is-cursor" data-a11y-id="row-files-0" role="treeitem" aria-selected="true">
<span class="d0-row-name">
<span class="d0-swatch sw-csv">
</span>sales.csv</span>
<span class="d0-row-meta">
</span>
</button>
<button class="d0-row" data-a11y-id="row-files-1" role="treeitem" aria-selected="false">
<span class="d0-row-name">
<span class="d0-swatch sw-parquet">
</span>trips.parquet</span>
<span class="d0-row-meta">
</span>
</button>
<button class="d0-row" data-a11y-id="row-files-2" role="treeitem" aria-selected="false">
<span class="d0-row-name">
<span class="d0-swatch sw-other">
</span>revenue_by_region</span>
<span class="d0-row-meta">
</span>
</button>
</div>
<div data-a11y-id="section-connections" role="group" aria-label="CONNECTIONS">
<button class="d0-section-label d0-label" data-a11y-id="section-toggle-connections" aria-expanded="true">
<span class="d0-chevron">▾</span>CONNECTIONS</button>
<div class="d0-row is-empty" data-a11y-id="empty-connections">no connections</div>
</div>
<div data-a11y-id="section-packages" role="group" aria-label="PACKAGES">
<button class="d0-section-label d0-label" data-a11y-id="section-toggle-packages" aria-expanded="true">
<span class="d0-chevron">▾</span>PACKAGES</button>
<div class="d0-row is-empty" data-a11y-id="empty-packages">no packages</div>
</div>
</div>
<div class="d0-sidebar-foot">
<span>session · 1 window · 3 tabs</span>
<span>ai none</span>
<span class="is-ok" data-a11y-id="sidebar-egress">egress 0 B</span>
</div>
</div>
<div class="d0-splitter is-col" data-a11y-id="sidebar-splitter" role="separator" aria-orientation="vertical">
</div>
<div class="d0-workarea" style="grid-template-columns: minmax(0, 1fr)">
<div class="d0-centre" style="grid-template-rows: minmax(0, 1fr)">
<div class="d0-pane-stack" data-a11y-id="pane-stack">
<div class="d0-grid-loading" data-a11y-id="grid-loading">
</div>
</div>
</div>
</div>
</div>
<div class="d0-statusbar" data-a11y-id="statusbar" role="status">
<span class="d0-dot is-busy">
</span>
<span data-a11y-id="status-engine">engine duckdb · starting</span>
<span data-a11y-id="status-mem">mem <span class="d0-num">4096</span> MB</span>
<span data-a11y-id="status-rows">rows <span class="d0-num">1–12</span> / <span class="d0-num">12</span>
</span>
<span class="d0-spacer">
</span>
<span class="d0-egress is-ok" data-a11y-id="status-egress">egress 0 B</span>
<span class="d0-key">
<span data-chord="palette">CHORD</span> commands</span>
</div>
</div>
</div>
